Cleaning duration delay (#280)
* feature : calculate cleaning delay

* test : alignCleaningService

* fix : sonar issues

* feature : save cleaning delay

* feature : set cleaningDelayNote

* fix : the order align functions calls

* fix : duration delay, skip plush for cleaning counting

* rewrite : cleaningDelayDuration method

* fix : cleaning delay calculate

* fix : loading packaging delays instead cleaning

* fix : cleaningDelay for plush

* experiment : remove align maintenance

* experiment : remove align maintenance

* experiment : fact cleaning less fact

* fix : negative constraint

* experiment : align by start for equals product

* experiment : align plush type

* experiment : remove maintenance

* fix : calculate planEndDateTime with delay

* fix : deleting from solution job list

* fix : condition for the same products

* fix : equals contract for prodcut && align by start

* fix : align for previous plush

* feature : reset align

* fix : compare in update cameraData, serialize delay to minutes

* fix : JObTest & ScheduleBuilderTest

* fix : tests for align

* fix : alignCleaningTest

* fix : test for align Duration

* testt : alignSolutionService && jobService

* test : jobService maintenance init

* test : alignCleanings if previous maintenace

* test : alignCLeanings

* test : product, alignCleanings

* test : alignCleaningService

* fix : sonar issues and rewrite JobTest

* test : JobTest

* test : removeMaintenance

* fix : sonar issues

* fix : np type in FactProdcutionRow

* fix : set start for line without fact after align

* fix : alignCleaningService

* experiment : calculfate start with shift by first fact

* fix : first plan for shifting

* feature : saving by fid delays

* refactor : oeePev loading

* fix : sonar issues

* fix : sonar issues

* Potential fix for pull request finding 'CodeQL / Missing catch of NumberFormatException'

Co-authored-by: Copilot Autofix powered by AI <62310815+github-advanced-security[bot]@users.noreply.github.